DP-15896: Fix text wrapping in header alert if link

--- a/assets/scss/03-organisms/_header-alert.scss
+++ b/assets/scss/03-organisms/_header-alert.scss
@@ -42,7 +42,7 @@
     font-size: 1.5rem;
     line-height: 1.3em;
 
-    a {
+    .ma__decorative-link, a {
       display: inline;
     }
   }
